--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,9 @@
   font-size: large;
 }
 
+.PokeList-item {
+  text-transform: capitalize;;
+}
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
