--- a/src/App.css
+++ b/src/App.css
@@ -29,3 +29,13 @@
 button.PokeList-item.list-group-item {
   text-align: center;
 }
+
+.Aligner {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.Aligner-item {
+  max-width: 50%;
+}
